--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block body %}
-<img src="{% static 'bootstrap/img/logo.png' %}">
+<img class="img-fluid rounded mx-auto d-block" style="max-height: 500px; height: 450px" src="{% static 'bootstrap/img/logo.png' %}">
+    <b><u><p class="text-center" style="font-size: 20px; padding-bottom: 20px">Regional Remote Sensing Center - WEST</p></u></b>
 {% endblock %}
