--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'custom/main.css' %}">
@@ -14,77 +15,98 @@
         <title>Base</title>
     {% endblock %}
 
-    <style>
-        a {
-            color: skyblue;
-        }
-
-        a:hover {
-            color: yellow;
-        }
-
-        li {
-            list-style-type: none;
-            display: inline;
-        }
-    </style>
-
 </head>
 <body>
 
+<header id="header" class="">
+
+    <div class="text-right container" style="padding-right: 50px">
+
+        {% if request.user.is_authenticated %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'logout' %}">
+                    <i class="fa fa-power-off"></i>
+                    Logout</a></li>
+                <li class="mr-2"><a href="{% url 'password_reset' %}">
+                    <i class="fa fa-group"></i>
+                    Reset Password</a></li>
+
+            </ul>
+
+        {% else %}
+            <ul style="
+                display: flex;
+                float: right;
+            ">
+                <li class="mr-2"><a href="{% url 'visitor:register' %}">
+                    <i class="fa fa-power-off"></i>
+                    Register</a></li>
+                <li class="mr-2"><a href="{% url 'login' %}">
+                    <i class="fa fa-male"></i>
+                    Login</a></li>
+            </ul>
+        {% endif %}
+
+    </div>
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-between d-flex" style="width: 100%;">
+
+            <div id="logo">
+                <a href="{% url 'home' %}"><img src="{% static 'bootstrap/img/logo.png' %}" alt="" title="" height="60/"></a>
+            </div>
+            <nav id="nav-menu-container align-items-right">
+                <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
+
+                    <!-- Home -->
+                    <li>
+                        <a href="{% url 'home' %}">Home</a>
+                    </li>
+
+                    {% if request.user.is_authenticated %}
+                        <li><a href="{% url 'visitor:dashboard' %}">Dashboard</a></li>
+                        <li><a href="{% url 'visitor:view_profile' %}">View
+                            Profile </a></li>
+                        <li><a href="{% url 'visitor:schedule' %}">Create Schedule </a></li>
+                        <li>Hello {{ request.user.get_full_name }}</li>
+                    {% endif %}
+
+
+                </ul>
+            </nav>
+
+        </div>
+    </div>
+</header>
+
 <nav class="navbar navbar-dark bg-dark ">
-    <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="/media/profile_photo/logo.png" style="width:40px; height:40px;">
-        RRSCW
-    </a>
-    {% if request.user.is_authenticated %}
-        <ul class="navbar-right">
-            <li ><a href="{% url 'logout' %}">
-                <i class="fa fa-power-off"></i>
-                Logout</a></li>
-            <li ><a href="{% url 'password_reset' %}">
-                <i class="fa fa-group"></i>
-                Reset Password</a></li>
-           >
-        </ul>
 
-
-    {% else %}
-        <ul class="navbar-right">
-            <li ><a href="{% url 'visitor:register' %}">
-                <i class="fa fa-power-off"></i>
-                Register</a></li>
-            <li><a href="{% url 'login' %}">
-                <i class="fa fa-male"></i>
-                Login</a></li>
-        </ul>
-    {% endif %}
 
 </nav>
-<nav class="navbar navbar-dark bg-dark ">
-    {% if request.user.is_authenticated %}
-        <ul class=" navbar-left">
-            <li style="padding-right: 5px;: "><a href="{% url 'visitor:dashboard' %}">Dashboard</a></li>
-            <li style="padding-right: 5px;: "><a href="{% url 'visitor:view_profile' %}">View Profile </a></li>
-            <li><a href="{% url 'visitor:schedule' %}">Create Schedule </a></li>
-        </ul>
 
-        </ul>
-        <ul class="navbar-right">
-            <li>Hello {{ request.user.get_full_name }}</li>
-        </ul>
-    {% endif %}
-
-
-</nav>
 
 
 {% block body %}
 
 {% endblock %}
 
-<footer class="mt-5">
+<footer class="footer-area" style="padding: 80px 0px">
 
+        <div class="row text-center">
+            <p class="col-lg-12 col-sm-12 footer-text m-0 text-white">
+                Copyright ©
+                <script>document.write(new Date().getFullYear());</script>
+                2019
+                All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                <a href="#" target="_blank">Students</a>
+                Interns
+            </p>
+
+        </div>
 </footer>
 </body>
 
