--- a/templates/home/guard_homepage.html
+++ b/templates/home/guard_homepage.html
@@ -7,8 +7,7 @@
 {% block body %}
 
     <div class="row">
-        <div class=" col-md-3 col-lg-3 card text-white bg-info mb-3 "
-             style="max-width: 20rem; margin-top:3rem; margin-left:2rem;">
+        <div class=" col-md-3 col-lg-3 card text-black card-color mb-3 ">
             <div class="card-header">Scheduled Visits</div>
             <div class="card-body">
                 {% for vr in user %}
@@ -21,35 +20,41 @@
         </div>
 
 
-        <div class="col-6">
+        <div class="col-lg-6 col-md-6">
             <div class="card visitor-verify my-5">
                 <div class="card-body">
                     <h5 class="card-title text-center">VERIFY</h5>
                     <form method="post" class="form-signin">
                         {% csrf_token %}
                         <div class="form-label-group">
+                            <label for="inputPhoneNumber">Phone Number</label>
                             <input type="tel" name="phone" pattern="[0-9]{10}" id="inputPhoneNumber"
                                    class="form-control"
                                    placeholder="Phone Number">
-                            <label for="inputPhoneNumber">Phone Number</label>
+
                         </div>
 
                         <div class="form-label-group">
-                            <input type="text" name="idnum" id="inputId" class="form-control" placeholder="ID number">
                             <label for="inputId">ID number</label>
+
+                            <input type="text" name="idnum" id="inputId" class="form-control" placeholder="ID number">
                         </div>
-                        <a class="btn btn-light" href="{% url 'visitor:scan-qr' %}">Scan QR
-                        </a>
-                        <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" name="action"
+                        <br>
+
+                        <button class="btn btn-lg btn-success btn-block text-uppercase" type="submit" name="action"
                                 value="Send">VERIFY
                         </button>
+
+                        <a class="btn btn-lg btn-primary btn-block text-uppercase mt-3" href="{% url 'visitor:scan-qr' %}">Scan
+                            QR
+                        </a>
+
                     </form>
                 </div>
             </div>
         </div>
 
-        <div class=" col-md-3 col-lg-3 card text-white bg-info mb-3 "
-             style="max-width: 20rem; margin-top:3rem; margin-left:2rem;">
+        <div class=" col-md-3 col-lg-3 card text-black card-color mb-3">
             <div class="card-header">Visitors Inside</div>
             <div class="card-body">
                 {% for vr in visitor %}
