--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
 </head>
 <body>
 
-<header id="header" class="">
+<header id="header">
 
-    <div class="text-right container" style="padding-right: 50px">
+    <div class="text-right container">
 
         {% if request.user.is_authenticated %}
             <ul style="
@@ -57,7 +57,8 @@
         <div class="row align-items-center justify-content-between d-flex" style="width: 100%;">
 
             <div id="logo">
-                <a href="{% url 'home' %}"><img src="{% static 'bootstrap/img/logo.png' %}" alt="" title="" height="60/"></a>
+                <a href="{% url 'home' %}"><img src="{% static 'bootstrap/img/logo.png' %}" alt="" title=""
+                                                height="60/"></a>
             </div>
             <nav id="nav-menu-container align-items-right">
                 <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
@@ -78,35 +79,27 @@
 
                 </ul>
             </nav>
-
         </div>
     </div>
 </header>
-
-<nav class="navbar navbar-dark bg-dark ">
-
-
-</nav>
-
-
 
 {% block body %}
 
 {% endblock %}
 
-<footer class="footer-area" style="padding: 80px 0px">
+<footer class="footer-area" style="padding: 30px 0px">
 
-        <div class="row text-center">
-            <p class="col-lg-12 col-sm-12 footer-text m-0 text-white">
-                Copyright ©
-                <script>document.write(new Date().getFullYear());</script>
-                2019
-                All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                <a href="#" target="_blank">Students</a>
-                Interns
-            </p>
+    <div class="row text-center">
+        <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
+            Copyright ©
+            <script>document.write(new Date().getFullYear());</script>
+            2019
+            All rights reserved | This website is developed with <i class="fa fa-heart-o" aria-hidden="true"></i> by
+            <a href="#" target="_blank">Students</a>
+            Interns
+        </p>
 
-        </div>
+    </div>
 </footer>
 </body>
 
