--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,44 +1,50 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head %}
-<title>Login</title>
+    <title>Login</title>
 
     <style>
-    .margin{
-        padding: 150px 20px;
-    }
-    @media screen and (max-width: 800px){
-        .margin{
-            padding-top: 172px;
-            padding-left: 15px;
-            padding-bottom: 42px;
-    }
-        .mobCenter{
-            text-align: center;
+        .margin {
+            padding: 150px 20px;
         }
-    }
+
+        @media screen and (max-width: 800px) {
+            .margin {
+                padding-top: 172px;
+                padding-left: 15px;
+                padding-bottom: 42px;
+            }
+
+            .mobCenter {
+                text-align: center;
+            }
+        }
     </style>
 {% endblock %}
 
 {% block body %}
-    <div class="container margin" >
+    <div class="container" style="padding-top: 50px;padding-bottom: 100px;margin-left: auto;">
         {% if form.errors %}
-        <h5>Please Check Your Username And Password</h5>
+            <h5>Please Check Your Username And Password</h5>
         {% endif %}
-        <img class="mb-4" src="{% static 'bootstrap/img/logo.png' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-30 font-weight-heavy">Please sign in</h1>
         <form method="post">
-        {% csrf_token %}
+            {% csrf_token %}
             <div class="mt-10">
-                <input type="text" name="username" placeholder="User Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'User Name'" required class="single-input col-md-5">
+                <input type="text" name="username" placeholder="User Name" onfocus="this.placeholder = ''"
+                       onblur="this.placeholder = 'User Name'" required class="single-input col-md-5">
             </div>
+            <p></p>
+            <p></p>
             <div class="mt-10">
-                <input type="password" name="password" placeholder="Pass Word" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'" required class="single-input col-md-5">
+                <input type="password" name="password" placeholder="Pass Word" onfocus="this.placeholder = ''"
+                       onblur="this.placeholder = 'Password'" required class="single-input col-md-5">
             </div>
+            <p></p>
+            <p></p>
             <div class="mt-10 mobCenter ">
-                <button type="submit" class="genric-btn success-border radius" >Login</button>
+                <button type="submit" class="genric-btn success-border radius">Login</button>
             </div>
-
 
 
         </form>
