--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -10,9 +10,9 @@
 
 
 
-    <div class="section-top-border" style="margin-left: 150px ; padding-top: 150px">
+    <div class=" container section-top-border" style="margin-left: auto ; padding-top: 50px">
         <div class="row">
-            <div class="col-lg-8 col-md-8">
+            <div class="col-md-8">
                 <h3 class="mb-30">Register</h3>
 
                 <form action="" method="post">
@@ -57,7 +57,6 @@
                                    required class="single-input">
                             <p>{{ form.password2.errors }}</p>
                         </div>
-
                         <div class="mt-10">
                             <button type="submit" class="genric-btn success-border radius">Register</button>
                         </div>
@@ -104,22 +103,16 @@
                                    required class="single-input">
                             <p>{{ form.password2.errors }}</p>
                         </div>
-
                         <div class="mt-10">
                             <button type="submit" class="genric-btn success-border radius">Register</button>
                         </div>
 
                         </div>
 
-
                         </div>
 
 
                     {% endif %}
-
-
-
     </form>
     </div>
-
 {% endblock %}
