--- a/templates/home/dashboard.html
+++ b/templates/home/dashboard.html
@@ -73,7 +73,7 @@
 
         <div class=" col-md-3 col-lg-3 card text-black card-color">
             <div class="card-header">Approved Schedule</div>
-            <div class="card-body">
+            <div class="card-body pre-scrollable">
                 {% for vr in upcoming_visitor %}
                     <dl>
                         <dt>Id: {{ vr.visitor_id }}</dt>
