--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<header id="header">
+<header id="header" class="noprint">
 
     <div class="text-right container">
 
@@ -87,7 +87,7 @@
 
 {% endblock %}
 
-<footer class="footer-area" style="padding: 30px 0px">
+<footer class="footer-area noprint" style="padding: 30px 0px">
 
     <div class="row text-center">
         <p class="col-sm-12 footer-text text-white " style="margin-top: 1rem;">
